# libsunspec

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  THIRD_PARTY.md  config.ini  dependencies.yaml
aux/: CMakeLists.txt
docs/: Doxyfile
examples/: CMakeLists.txt  config.ini  example.cpp  read_inverter_current_example.cpp  read_manufacturer_example.cpp
include/sunspec/: commons.hpp  config.hpp  conversion.hpp  exceptions.hpp  reader.hpp  sunspec_device.hpp  sunspec_device_mapping.hpp  sunspec_model.hpp  types.hpp  utils.hpp
src/: CMakeLists.txt  conversion.cpp  device_cli_scanner.cpp  sunspec_device.cpp  sunspec_device_mapping.cpp  sunspec_model.cpp  utils.cpp
